# regex-posix

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  Makefile  README.md  Setup.hs  cabal.haskell-ci  configure.ac  package.conf.in  regex-posix-clib.cabal  regex-posix.cabal
.github/workflows/: haskell-ci.yml
Text/Regex/: Posix.hs
Text/Regex/Posix/: ByteString.hs  Sequence.hs  String.hs  Wrap.hsc
Text/Regex/Posix/ByteString/: Lazy.hs
cbits/: myfree.c  myfree.h  regcomp.c  regex.h  regex_internal.c  regex_internal.h  regexec.c
src/Text/Regex/: Posix.hs
src/Text/Regex/Posix/: ByteString.hs  Sequence.hs  String.hs  Wrap.hsc
src/Text/Regex/Posix/ByteString/: Lazy.hs
