cabal-version:          1.12
name:                   regex-posix-clib
version:                2.7

build-type:             Simple
license:                LGPL-2.1
license-file:           LICENSE
maintainer:             hvr@gnu.org
bug-reports:            https://github.com/hvr/regex-posix
synopsis:               "Regex for Windows" C library
category:               Text
description:
  This package provides the <http://gnuwin32.sourceforge.net/packages/regex.htm Regex for Windows> C library for convenience.

extra-source-files:
  cbits/re_comp.h
  cbits/regcomp.c
  cbits/regex.c
  cbits/regex.h
  cbits/regex_internal.c
  cbits/regex_internal.h
  cbits/regexec.c

source-repository head
  type:     git
  location: https://github.com/hvr/regex-posix.git
  branch:   clib

library
  c-sources:        cbits/regex.c
  cc-options:       -O3 -Wall
                    -U_LIBC -UDEBUG
                    -UHAVE_CONFIG_H
                    -DUSE_REGEX_STATIC
                    -DHAVE_STDBOOL_H
                    -DHAVE_STDINT_H
  include-dirs:     cbits
  install-includes: regex.h re_comp.h

  default-language: Haskell2010
