cabal-version:          1.12
name:                   regex-posix
version:                0.96.0.0

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2007-2010, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             hvr@gnu.org
bug-reports:            https://github.com/hvr/regex-posix
synopsis:               Replaces/Enhances Text.Regex
category:               Text
description:
  The POSIX regex backend for <//hackage.haskell.org/package/regex-base regex-base>

extra-source-files:
  ChangeLog.md
  cbits/re_comp.h
  cbits/recomp.c
  cbits/regex_internal.c
  cbits/regex_internal.h
  cbits/regex.h
  cbits/regex.c
  cbits/regexec.c
  c-finalizer/myfree.h
  c-finalizer/myfree.c

source-repository head
  type:     git
  location: https://github.com/hvr/regex-posix.git

library
  exposed-modules:
      Text.Regex.Posix
      Text.Regex.Posix.Wrap
      Text.Regex.Posix.String
      Text.Regex.Posix.Sequence
      Text.Regex.Posix.ByteString
      Text.Regex.Posix.ByteString.Lazy

  other-modules:
      Paths_regex_posix

  c-sources:        c-finalizer/myfree.c
  include-dirs:     c-finalizer
  if !os(windows)
    cc-options:     -DHAVE_REGEX_H
  else
    c-sources:      cbits/regex_internal.c
                    cbits/regcomp.c
                    cbits/regex.c
                    cbits/regexec.c
    cc-options: -O3 -DREGEX_STATIC
    include-dirs:   cbits

  default-language: Haskell2010
  default-extensions:
      MultiParamTypeClasses
      FunctionalDependencies
      ForeignFunctionInterface
      GeneralizedNewtypeDeriving
      FlexibleContexts
      TypeSynonymInstances
      FlexibleInstances

  build-depends: regex-base == 0.94.*
               , base       >= 4.3 && < 4.14
               , containers >= 0.4 && < 0.7
               , bytestring >= 0.9 && < 0.11
               , array      >= 0.3 && < 0.6

  if !impl(ghc >= 8)
      build-depends: fail == 4.9.*

  ghc-options: -O2
               -Wall -fno-warn-unused-imports
