cabal-version:          1.12
name:                   regex-posix
version:                0.96.0.0

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2007-2010, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             hvr@gnu.org
bug-reports:            https://github.com/hvr/regex-posix
synopsis:               Replaces/Enhances Text.Regex
category:               Text
description:
  The POSIX regex backend for <//hackage.haskell.org/package/regex-base regex-base>

extra-source-files:
  ChangeLog.md
  cbits/myfree.h

source-repository head
  type:     git
  location: https://github.com/hvr/regex-posix.git

flag force-posix-clib
  default: False
  manual: True
  description: Force use of <//hackage.haskell.org/package/regex-posix-clib regex-posix-clib> package.

library
  hs-source-dirs: src
  exposed-modules:
      Text.Regex.Posix
      Text.Regex.Posix.Wrap
      Text.Regex.Posix.String
      Text.Regex.Posix.Sequence
      Text.Regex.Posix.ByteString
      Text.Regex.Posix.ByteString.Lazy

  other-modules:
      Paths_regex_posix

  c-sources:        cbits/myfree.c
  include-dirs:     cbits

  if flag(force-posix-clib) || os(windows)
      build-depends: regex-posix-clib == 2.7.*

  default-language: Haskell2010
  default-extensions:
      MultiParamTypeClasses
      FunctionalDependencies
      ForeignFunctionInterface
      GeneralizedNewtypeDeriving
      FlexibleContexts
      TypeSynonymInstances
      FlexibleInstances

  build-depends: regex-base == 0.94.*
               , base       >= 4.3 && < 4.14
               , containers >= 0.4 && < 0.7
               , bytestring >= 0.9 && < 0.11
               , array      >= 0.3 && < 0.6

  if !impl(ghc >= 8)
      build-depends: fail == 4.9.*

  ghc-options: -O2
               -Wall -fno-warn-unused-imports
