cabal-version:          1.24
name:                   regex-posix
version:                0.96.0.2

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2007-2010, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             Andreas Abel
bug-reports:            https://github.com/haskell-hvr/regex-posix
synopsis:               POSIX Backend for "Text.Regex" (regex-base)
category:               Text
description:
  The POSIX regex backend for <//hackage.haskell.org/package/regex-base regex-base>.
  .
  The main appeal of this backend is that it's very lightweight due to its reliance on the ubiquitous <https://pubs.opengroup.org/onlinepubs/9699919799/basedefs/regex.h.html POSIX.2 regex> facility that is provided by the standard C library on most POSIX platforms.
  .
  See also <https://wiki.haskell.org/Regular_expressions> for more information.

extra-doc-files:
  README.md
  ChangeLog.md

extra-source-files:
  cbits/myfree.h

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.3
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  type:     git
  location: https://github.com/haskell-hvr/regex-posix.git

source-repository this
  type:     git
  location: https://github.com/haskell-hvr/regex-base.git
  tag:      v0.96.0.2

flag _regex-posix-clib
  manual: False
  default: False
  description: Use <//hackage.haskell.org/package/regex-posix-clib regex-posix-clib> package (used by default on Windows)

library
  hs-source-dirs: src
  exposed-modules:
      Text.Regex.Posix
      Text.Regex.Posix.Wrap
      Text.Regex.Posix.String
      Text.Regex.Posix.Sequence
      Text.Regex.Posix.ByteString
      Text.Regex.Posix.ByteString.Lazy

  other-modules:
      Paths_regex_posix

  c-sources:        cbits/myfree.c
  include-dirs:     cbits

  if flag(_regex-posix-clib) || os(windows)
    build-depends: regex-posix-clib == 2.7.*
    -- Otherwise, use POSIX.2 regex implementation from @libc@.
    -- However, Windows/msys2 doesn't provide a POSIX.2 regex impl in its @libc@.

  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      MultiParamTypeClasses
      FunctionalDependencies
      ForeignFunctionInterface
      GeneralizedNewtypeDeriving
      FlexibleContexts
      FlexibleInstances

  build-depends:
        regex-base == 0.94.*
      , base       >= 4.9  && < 5
      , containers >= 0.5  && < 1
      , bytestring >= 0.10 && < 1
      , array      >= 0.5  && < 1

  ghc-options:
      -Wall
      -Wcompat
      -Wno-orphans
